--- a/content/about.html
+++ b/content/about.html
@@ -2,6 +2,7 @@
 title: "Chi siamo"
 ---
 
+<!-- Specialisti in cilindri idraulici e pneumatici -->
 <section class="relative isolate overflow-hidden py-20 sm:py-32 bg-slate-800">
   <div class="max-w-7xl mx-auto">
     <div class="px-4 md:px-6 lg:px-8">
@@ -10,83 +11,87 @@ title: "Chi siamo"
   </div>
 </section>
 
-<section class="relative isolate overflow-hidden py-20 sm:py-32">
+<!-- Aree di competenza -->
+<section class="relative isolate overflow-hidden mt-20 sm:mt-32">
   <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8">
-      <div class="text-center">
-        <p class="mb-5">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
-        <p>Tutto questo lo facciamo tramite tre aree di competenza:</p>
+    <div class="px-4 md:px-6 lg:px-8 text-center">
+      <p>Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
+      <p class="mt-5">Tutto questo lo facciamo tramite tre aree di competenza:</p>
+      <div class="flex flex-wrap justify-center mt-5">
+        <div class="w-full md:w-1/2 lg:w-1/3">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Manutenzione</h3>
+            <p class="leading-6">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+          </div>
+        </div>
+        <div class="w-full md:w-1/2 lg:w-1/3">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Produzione</h3>
+            <p class="leading-6">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
+          </div>
+        </div>
+        <div class="w-full md:w-1/2 lg:w-1/3">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Ricambi</h3>
+            <p class="leading-6">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-<div class="pt-5">
-  <div class="">
-    <h3 class="text-lg font-semibold leading-6">Manutenzione</h3>
-    <p class="mt-3 text-sm leading-6">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
-  </div>
-  <div class="">
-    <h3 class="text-lg font-semibold leading-6">Produzione</h3>
-    <p class="mt-3 text-sm leading-6">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
-  </div>
-  <div class="">
-    <h3 class="text-lg font-semibold leading-6">Ricambi</h3>
-    <p class="mt-3 text-sm leading-6">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
-  </div>
-</div>
-
+<!-- Perchè scegliere Centro Cilindri -->
+<section class="relative isolate overflow-hidden mt-20 sm:mt-32">
+  <div class="max-w-7xl mx-auto">
+    <div class="px-4 md:px-6 lg:px-8 text-center">
+      <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Perchè scegliere Centro Cilindri</h2>
+      <div class="mt-10">
+        <div class="flex flex-wrap justify-center">
+          <div class="w-full md:w-1/2 lg:w-1/3">
+            <div class="p-3 md:p-5">
+              <h3 class="mb-5 text-lg font-semibold leading-6">Unico fornitore</h3>
+              <p class="leading-6">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza</p>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 lg:w-1/3">
+            <div class="p-3 md:p-5">
+              <h3 class="mb-5 text-lg font-semibold leading-6">Assistenza tecnica specializzata</h3>
+              <p class="leading-6">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, effettuare sopralluoghi, supportare il cliente nelle fasi operative ed eseguire manutenzioni nella nostra officina</p>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 lg:w-1/3">
+            <div class="p-3 md:p-5">
+              <h3 class="mb-5 text-lg font-semibold leading-6">Esperienza e competenza</h3>
+              <p class="leading-6">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
-<!--
 
-<section class="relative isolate overflow-hidden py-24 sm:py-32">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:mx-0">
-      <p class="mt-6 text-lg leading-8">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
-      <p class="mt-6 text-lg leading-8">Tutto questo lo facciamo tramite tre aree di competenza:</p>
-    </div>
-    <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
-
-      <div class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3 text-base leading-7">
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Revisione, riparazione ed upgrade di cilindri idraulici/pneumatici</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Manutenzione</dd>
-        </div>
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Produzione</dd>
-        </div>
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Ricambi</dd>
+<!-- Settori industriali -->
+<section class="relative isolate overflow-hidden my-20 sm:my-32">
+  <div class="max-w-7xl mx-auto">
+    <div class="px-4 md:px-6 lg:px-8 text-center">
+      <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Settori industriali</h2>
+      <div class="mt-10">
+        <p>I nostri clienti scelgono Centro Cilindri perché ci considerano un partner affidabile in grado di fornire soluzioni concrete. Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
+        <div class="mt-10 grid grid-cols-1 gap-4 text-center text-sm lg:grid-cols-3">
+          <div class="mx-auto flex max-w-xs flex-col">Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</div>
+          <div class="mx-auto flex max-w-xs flex-col">Stampaggio acciaio ed alluminio a freddo</div>
+          <div class="mx-auto flex max-w-xs flex-col">Produzione pneumatici</div>
+          <div class="mx-auto flex max-w-xs flex-col">Forgiatura</div>
+          <div class="mx-auto flex max-w-xs flex-col">Pressofusione alluminio ed altre leghe</div>
+          <div class="mx-auto flex max-w-xs flex-col">Stampaggio materie plastiche</div>
+          <div class="mx-auto flex max-w-xs flex-col">Produzione pannelli e laminati base legno</div>
+          <div class="mx-auto flex max-w-xs flex-col">Produzione energia da fonti rinnovabili</div>
+          <div class="mx-auto flex max-w-xs flex-col">Gestione rifiuti</div>
+          <div class="mx-auto flex max-w-xs flex-col">Idraulica mobile</div>
         </div>
       </div>
-
-      <h3 class="mt-20 text-4xl font-bold tracking-tight sm:text-6xl">Perchè scegliere Centro Cilindri</h3>
-      <dl class="mt-16 sm:mt-20 grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Unico fornitore</dd>
-        </div>
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, effettuare sopralluoghi, supportare il cliente nelle fasi operative ed eseguire manutenzioni nella nostra officina</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Assistenza tecnica specializzata</dd>
-        </div>
-        <div class="flex flex-col-reverse">
-          <dt class="text-base leading-7">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche</dt>
-          <dd class="text-2xl font-bold leading-9 tracking-tight">Esperienza e competenza</dd>
-        </div>
-      </dl>
     </div>
   </div>
 </section>
-
-
-
-<section class="relative isolate overflow-hidden py-32 sm:py-40">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8 text-center">
-    <h2 class="text-3xl font-bold tracking-tight sm:text-5xl mb-2">Settori industriali</h2>
-    <p class="mt-10">I nostri clienti scelgono Centro Cilindri perché ci considerano un partner affidabile in grado di fornire soluzioni concrete.</p>
-    <p class="">Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
-  </div>
-</section>
--->
