--- a/content/about.html
+++ b/content/about.html
@@ -3,16 +3,16 @@ title: "Chi siamo"
 ---
 
 <!-- Specialisti in cilindri idraulici e pneumatici -->
-<section class="relative isolate overflow-hidden py-20 sm:py-32 bg-slate-800">
+<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
   <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8">
-      <h1 class="text-3xl sm:text-5xl font-bold text-white tracking-tight">Specialisti in cilindri idraulici e pneumatici</h1>
+    <div class="px-4 md:px-6 lg:px-8 text-center sm:text-left">
+      <h1 class="text-4xl sm:text-5xl font-bold text-white tracking-tight">Specialisti in cilindri idraulici e pneumatici</h1>
     </div>
   </div>
 </section>
 
 <!-- Aree di competenza -->
-<section class="relative isolate overflow-hidden mt-20 sm:mt-32">
+<section class="relative isolate overflow-hidden py-32 sm:py-40">
   <div class="max-w-7xl mx-auto">
     <div class="px-4 md:px-6 lg:px-8 text-center">
       <p>Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
@@ -42,9 +42,9 @@ title: "Chi siamo"
 </section>
 
 <!-- Perchè scegliere Centro Cilindri -->
-<section class="relative isolate overflow-hidden mt-20 sm:mt-32">
+<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
   <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-center">
+    <div class="px-4 md:px-6 lg:px-8 text-white text-center">
       <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Perchè scegliere Centro Cilindri</h2>
       <div class="mt-10">
         <div class="flex flex-wrap justify-center">
@@ -73,7 +73,7 @@ title: "Chi siamo"
 </section>
 
 <!-- Settori industriali -->
-<section class="relative isolate overflow-hidden my-20 sm:my-32">
+<section class="relative isolate overflow-hidden mt-32 sm:mt-40">
   <div class="max-w-7xl mx-auto">
     <div class="px-4 md:px-6 lg:px-8 text-center">
       <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Settori industriali</h2>
