--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,3 +1,60 @@
 ---
 title: "I nostri servizi"
 ---
+
+<!-- Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri -->
+<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
+  <div class="max-w-7xl mx-auto">
+    <div class="px-4 md:px-6 lg:px-8 text-center sm:text-left">
+      <h1 class="text-4xl sm:text-5xl font-bold text-white tracking-tight">Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
+
+      <div class="grid gap-4 grid-cols-1 md:grid-cols-3 mt-20">
+        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Manutenzione</h3>
+            <p class="leading-6">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+          </div>
+        </div>
+        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Produzione</h3>
+            <p class="leading-6">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
+          </div>
+        </div>
+        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
+          <div class="p-3 md:p-5">
+            <h3 class="mb-5 text-lg font-semibold leading-6">Ricambi</h3>
+            <p class="leading-6">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Manutenzione -->
+<section class="relative isolate overflow-hidden py-20 sm:py-28">
+  <div class="max-w-7xl mx-auto">
+    <div class="px-4 md:px-6 lg:px-8">
+      <div class="prose">
+        <h2 class="text-lg font-semibold leading-6">Manutenzione</h2>
+
+        <!-- Revisione, riparazione ed upgrade di cilindri oleodinamici -->
+        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Revisione, riparazione ed upgrade di cilindri oleodinamici</h3>
+        <p>La manutenzione di cilindri idraulici e pneumatici è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti: da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</p>
+        <p>Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</p>
+        <p>Le operazioni di revisione, riparazione, le lavorazioni meccaniche e la produzione dei componenti meccanici da sostituire avvengono totalmente all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
+        <p>Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</p>
+
+        <!-- Il tempo è denaro -->
+        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Il tempo è denaro</h3>
+        <p>Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
+
+        <!-- Centro Cilindri Digital Service -->
+        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
+        <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
+        <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
+      </div>
+    </div>
+  </div>
+</section>
