--- a/content/servizi.html
+++ b/content/servizi.html
@@ -3,58 +3,99 @@ title: "I nostri servizi"
 ---
 
 <!-- Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri -->
-<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-center sm:text-left">
-      <h1 class="text-4xl sm:text-5xl font-bold text-white tracking-tight">Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
+<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+  <h1 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
 
-      <div class="grid gap-4 grid-cols-1 md:grid-cols-3 mt-20">
-        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Manutenzione</h3>
-            <p class="leading-6">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
-          </div>
-        </div>
-        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Produzione</h3>
-            <p class="leading-6">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
-          </div>
-        </div>
-        <div class="border border-slate-300 bg-white/10 text-white rounded-md">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Ricambi</h3>
-            <p class="leading-6">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
-          </div>
-        </div>
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Manutenzione</h3>
+        <p class="text-sm font-light text-gray-300">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Produzione</h3>
+        <p class="text-sm font-light text-gray-300">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Ricambi</h3>
+        <p class="text-sm font-light text-gray-300">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
       </div>
     </div>
   </div>
 </section>
 
 <!-- Manutenzione -->
-<section class="relative isolate overflow-hidden py-20 sm:py-28">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8">
-      <div class="prose">
-        <h2 class="text-lg font-semibold leading-6">Manutenzione</h2>
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <div class="prose">
+    <h2 class="text-lg font-semibold">Manutenzione</h2>
 
-        <!-- Revisione, riparazione ed upgrade di cilindri oleodinamici -->
-        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Revisione, riparazione ed upgrade di cilindri oleodinamici</h3>
-        <p>La manutenzione di cilindri idraulici e pneumatici è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti: da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</p>
-        <p>Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</p>
-        <p>Le operazioni di revisione, riparazione, le lavorazioni meccaniche e la produzione dei componenti meccanici da sostituire avvengono totalmente all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
-        <p>Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</p>
+    <!-- Revisione, riparazione ed upgrade di cilindri oleodinamici -->
+    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Revisione, riparazione ed upgrade di cilindri oleodinamici</h3>
+    <p>La manutenzione di cilindri idraulici e pneumatici è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti: da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</p>
+    <p>Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</p>
+    <p>Le operazioni di revisione, riparazione, le lavorazioni meccaniche e la produzione dei componenti meccanici da sostituire avvengono totalmente all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
+    <p>Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</p>
 
-        <!-- Il tempo è denaro -->
-        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Il tempo è denaro</h3>
-        <p>Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
+    <!-- Il tempo è denaro -->
+    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Il tempo è denaro</h3>
+    <p>Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
 
-        <!-- Centro Cilindri Digital Service -->
-        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
-        <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
-        <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
-      </div>
-    </div>
+    <!-- Centro Cilindri Digital Service -->
+    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
+    <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
+    <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
+  </div>
+</section>
+
+<!-- Produzione -->
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <div class="prose">
+    <h2 class="text-lg font-semibold">Produzione</h2>
+    <!-- Progettazione e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno -->
+    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Progettazione e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno</h3>
+    <p>Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
+    <p>Le fasi di produzione dei singoli componenti meccanici dei cilindri, quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi, siano essi destinati a riparazioni o per nuovi cilindri, avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
+    <p>La nostra produzione avviene in Italia e continuerà ad esserlo per sempre. Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri o i vostri ricambi meccanici partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani, considerati i migliori al mondo.</p>
+    <p>Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede.</p>
+  </div>
+</section>
+
+<!-- Ricambi -->
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <div class="prose">
+    <h2 class="text-lg font-semibold">Ricambi</h2>
+
+    <!-- Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche -->
+    <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h3>
+    <p>Siamo esperti in guarnizioni per oleodinamica e pneumatica perché conosciamo bene i punti critici di un cilindro e le attenzioni che bisogna avere durante la loro manutenzione. Il nostro core business è la riparazione di cilindri esistenti: da qui nasce l’estrema attenzione che poniamo sul sistema di tenuta, per offrire al cliente industriale soluzioni chiavi in mano ad altissima affidabilità.</p>
+    <p>Quando il cliente infatti effettua internamente la manutenzione dei cilindri, lo supportiamo con il nostro personale tecnico per offrire assistenza sul campo nelle fasi di smontaggio del cilindro, rilevazione dimensioni e tipologia guarnizioni sulla base delle condizioni di lavoro, e durante il montaggio finale.</p>
+    <p>Il nostro servizio specializzato, valido per tutti i cilindri idraulici/pneumatici e le presse presenti sul mercato, comprende:</p>
+    <ul>
+      <li><strong class="font-semibold">Assistenza in stabilimento</strong> con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni</li>
+      <li><strong class="font-semibold">Fornitura guarnizioni</strong> commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri.</li>
+    </ul>
+
+    <p>La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include:</p>
+    <ul class="leading-tight">
+      <li>Raschiatori</li>
+      <li>Guarnizioni stelo</li>
+      <li>Guarnizioni pistone</li>
+      <li>Guarnizioni statiche ed o-ring (OR)</li>
+      <li>Guarnizioni per alberi rotanti</li>
+      <li>Snodi sferici</li>
+    </ul>
   </div>
 </section>
