--- a/content/about.html
+++ b/content/about.html
@@ -3,12 +3,8 @@ title: "Chi siamo"
 ---
 
 <!-- Specialisti in cilindri idraulici e pneumatici -->
-<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-center sm:text-left">
-      <h1 class="text-4xl sm:text-5xl font-bold text-white tracking-tight">Specialisti in cilindri idraulici e pneumatici</h1>
-    </div>
-  </div>
+<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Specialisti in cilindri idraulici e pneumatici</h1>
 </section>
 
 <!-- Aree di competenza -->
