--- a/content/contatti.html
+++ b/content/contatti.html
@@ -1,3 +1,39 @@
 ---
 title: "Contatti"
 ---
+
+<!-- Contatti -->
+<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+  <h1 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Contatti</h1>
+</section>
+
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <div class="sm:text-center">
+    <p class="mb-4">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino, in Via della Canapa 9.</p>
+    <p class="mb-8">Per informazioni o se hai bisogno di assistenza tecnica e commerciale puoi contattare:</p>
+
+    <div class="flex flex-wrap justify-center gap-4">
+      <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+        <div class="flex flex-col items-center p-4 lg:p-8">
+          <h5 class="mb-1 text-xl font-medium text-gray-900">Alessio Mancini</h5>
+          <span class="mb-8 text-sm text-gray-500">Sales Manager & Field Service</span>
+          <div class="text-sm text-center">
+            <span>(+39) 348 1630147</span>
+            <span>alessio.mancini@centrocilindri.it</span>
+          </div>
+        </div>
+      </div>
+      <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+        <div class="flex flex-col items-center p-4 lg:p-8">
+          <h5 class="mb-1 text-xl font-medium text-gray-900">Gianluca Mancini</h5>
+          <span class="mb-8 text-sm text-gray-500">Production Manager & Technical Support</span>
+          <div class="text-sm text-center">
+            <span>(+39) 366 4734163</span>
+            <span>gianluca.mancini@centrocilindri.it</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
