--- a/content/contatti.html
+++ b/content/contatti.html
@@ -4,7 +4,7 @@ title: "Contatti"
 
 <!-- Contatti -->
 <section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
-  <h1 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Contatti</h1>
+  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Contatti</h1>
 </section>
 
 <section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
