--- a/content/about.html
+++ b/content/about.html
@@ -4,90 +4,95 @@ title: "Chi siamo"
 
 <!-- Specialisti in cilindri idraulici e pneumatici -->
 <section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
-  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Specialisti in cilindri idraulici e pneumatici</h1>
+  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Specialisti in cilindri idraulici e pneumatici</h1>
 </section>
 
 <!-- Aree di competenza -->
-<section class="relative isolate overflow-hidden py-32 sm:py-40">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-center">
-      <p>Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
-      <p class="mt-5">Tutto questo lo facciamo tramite tre aree di competenza:</p>
-      <div class="flex flex-wrap justify-center mt-5">
-        <div class="w-full md:w-1/2 lg:w-1/3">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Manutenzione</h3>
-            <p class="leading-6">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
-          </div>
-        </div>
-        <div class="w-full md:w-1/2 lg:w-1/3">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Produzione</h3>
-            <p class="leading-6">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
-          </div>
-        </div>
-        <div class="w-full md:w-1/2 lg:w-1/3">
-          <div class="p-3 md:p-5">
-            <h3 class="mb-5 text-lg font-semibold leading-6">Ricambi</h3>
-            <p class="leading-6">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
-          </div>
-        </div>
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <p class="mb-4">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
+  <p class="mb-8">Tutto questo lo facciamo tramite tre aree di competenza:</p>
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Manutenzione</h3>
+        <p class="text-sm">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Produzione</h3>
+        <p class="text-sm">Progettazione e fabbricazione nuovi cilindri e componenti meccanici a disegno</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Ricambi</h3>
+        <p class="text-sm">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
       </div>
     </div>
   </div>
 </section>
 
 <!-- Perchè scegliere Centro Cilindri -->
-<section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-white text-center">
-      <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Perchè scegliere Centro Cilindri</h2>
-      <div class="mt-10">
-        <div class="flex flex-wrap justify-center">
-          <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="p-3 md:p-5">
-              <h3 class="mb-5 text-lg font-semibold leading-6">Unico fornitore</h3>
-              <p class="leading-6">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza</p>
-            </div>
-          </div>
-          <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="p-3 md:p-5">
-              <h3 class="mb-5 text-lg font-semibold leading-6">Assistenza tecnica specializzata</h3>
-              <p class="leading-6">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, effettuare sopralluoghi, supportare il cliente nelle fasi operative ed eseguire manutenzioni nella nostra officina</p>
-            </div>
-          </div>
-          <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="p-3 md:p-5">
-              <h3 class="mb-5 text-lg font-semibold leading-6">Esperienza e competenza</h3>
-              <p class="leading-6">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche</p>
-            </div>
-          </div>
-        </div>
+<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+  <h2 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Perchè scegliere Centro Cilindri</h2>
+
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Unico fornitore</h3>
+        <p class="text-sm text-gray-300">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Assistenza tecnica specializzata</h3>
+        <p class="text-sm text-gray-300">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, effettuare sopralluoghi, supportare il cliente nelle fasi operative ed eseguire manutenzioni nella nostra officina</p>
+      </div>
+    </div>
+    <div class="flex lg:justify-center">
+      <svg class="mr-2 w-5 h-5 shrink-0 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+      </svg>
+      <div>
+        <h3 class="mb-2 text-lg font-semibold text-white leading-none">Esperienza e competenza</h3>
+        <p class="text-sm text-gray-300">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche</p>
       </div>
     </div>
   </div>
 </section>
 
 <!-- Settori industriali -->
-<section class="relative isolate overflow-hidden mt-32 sm:mt-40">
-  <div class="max-w-7xl mx-auto">
-    <div class="px-4 md:px-6 lg:px-8 text-center">
-      <h2 class="text-3xl sm:text-5xl font-bold tracking-tight">Settori industriali</h2>
-      <div class="mt-10">
-        <p>I nostri clienti scelgono Centro Cilindri perché ci considerano un partner affidabile in grado di fornire soluzioni concrete. Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
-        <div class="mt-10 grid grid-cols-1 gap-4 text-center text-sm lg:grid-cols-3">
-          <div class="mx-auto flex max-w-xs flex-col">Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</div>
-          <div class="mx-auto flex max-w-xs flex-col">Stampaggio acciaio ed alluminio a freddo</div>
-          <div class="mx-auto flex max-w-xs flex-col">Produzione pneumatici</div>
-          <div class="mx-auto flex max-w-xs flex-col">Forgiatura</div>
-          <div class="mx-auto flex max-w-xs flex-col">Pressofusione alluminio ed altre leghe</div>
-          <div class="mx-auto flex max-w-xs flex-col">Stampaggio materie plastiche</div>
-          <div class="mx-auto flex max-w-xs flex-col">Produzione pannelli e laminati base legno</div>
-          <div class="mx-auto flex max-w-xs flex-col">Produzione energia da fonti rinnovabili</div>
-          <div class="mx-auto flex max-w-xs flex-col">Gestione rifiuti</div>
-          <div class="mx-auto flex max-w-xs flex-col">Idraulica mobile</div>
-        </div>
-      </div>
-    </div>
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <h2 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none text-center tracking-tight md:text-5xl lg:text-6xl">Settori industriali</h2>
+  <div class="prose">
+    <p class="mb-8">I nostri clienti scelgono Centro Cilindri perché ci considerano un partner affidabile in grado di fornire soluzioni concrete. Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
+    <ul>
+      <li>Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</li>
+      <li>Stampaggio acciaio ed alluminio a freddo</li>
+      <li>Produzione pneumatici</li>
+      <li>Forgiatura</li>
+      <li>Pressofusione alluminio ed altre leghe</li>
+      <li>Stampaggio materie plastiche</li>
+      <li>Produzione pannelli e laminati base legno</li>
+      <li>Produzione energia da fonti rinnovabili</li>
+      <li>Gestione rifiuti</li>
+      <li>Idraulica mobile</li>
+    </ul>
   </div>
 </section>
