--- a/content/servizi.html
+++ b/content/servizi.html
@@ -4,7 +4,7 @@ title: "I nostri servizi"
 
 <!-- Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri -->
 <section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
-  <h1 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
+  <h1 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
 
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
     <div class="flex lg:justify-center">
