--- a/content/about.html
+++ b/content/about.html
@@ -3,14 +3,15 @@ title: "Chi siamo"
 ---
 
 <!-- Specialisti in cilindri idraulici e pneumatici -->
-<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+<section class="max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
   <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Specialisti in cilindri idraulici e pneumatici</h1>
 </section>
 
 <!-- Aree di competenza -->
 <section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-  <p class="mb-4">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri</p>
-  <p class="mb-8">Tutto questo lo facciamo tramite tre aree di competenza:</p>
+  <p class="mb-4">Supportiamo le imprese industriali con servizi di riparazione e manutenzione di cilindri idraulici e pneumatici esistenti. Qualora la riparazione non sia conveniente, offriamo un servizio di progettazione e costruzione interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre assistenza sul campo e vendita guarnizioni di tenuta per cilindri e presse.</p>
+  <p class="mb-8">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
+  <p class="mb-8">Le nostre aree di competenza:</p>
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
     <div class="flex lg:justify-center">
       <svg class="mr-2 w-5 h-5 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -43,7 +44,7 @@ title: "Chi siamo"
 </section>
 
 <!-- Perchè scegliere Centro Cilindri -->
-<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-32 px-4 sm:px-8 lg:px-16 bg-slate-800">
   <h2 class="mb-8 lg:mb-16 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Perchè scegliere Centro Cilindri</h2>
 
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
@@ -96,3 +97,5 @@ title: "Chi siamo"
     </ul>
   </div>
 </section>
+
+{{< cta >}}
