--- a/content/contatti.html
+++ b/content/contatti.html
@@ -9,10 +9,11 @@ title: "Contatti"
 
 <section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
   <div class="sm:text-center">
-    <p class="mb-4">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino, in Via della Canapa 9.</p>
+
+    <p class="mb-4">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino, in Via della Canapa.</p>
     <p class="mb-8">Per informazioni o se hai bisogno di assistenza tecnica e commerciale puoi contattare:</p>
 
-    <div class="flex flex-wrap justify-center gap-4">
+    <div class="flex flex-wrap justify-center gap-4 mb-8">
       <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
         <div class="flex flex-col items-center p-4 lg:p-8">
           <h5 class="mb-1 text-xl font-medium text-gray-900">Alessio Mancini</h5>
@@ -23,6 +24,7 @@ title: "Contatti"
           </div>
         </div>
       </div>
+
       <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
         <div class="flex flex-col items-center p-4 lg:p-8">
           <h5 class="mb-1 text-xl font-medium text-gray-900">Gianluca Mancini</h5>
@@ -35,5 +37,9 @@ title: "Contatti"
       </div>
     </div>
 
+    <div class="text-gray-800">
+      <p><strong>Sede legale</strong> Via Bagetti 11, 10138 Torino (TO)</p>
+      <p><strong>Sede operativa</strong> Via della Canapa 9, 10060 Macello (TO)</p>
+    </div>
   </div>
 </section>
