aggiunto background alle sezioni (fake per ora)

--- a/content/servizi.html
+++ b/content/servizi.html
@@ -3,7 +3,7 @@ title: "I nostri servizi"
 ---
 
 <!-- Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri -->
-<section class="max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+<section class="section-with-background max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
   <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
 </section>
 
