nuovi inserimenti e modifiche

--- a/content/contatti.html
+++ b/content/contatti.html
@@ -3,7 +3,7 @@ title: "Contatti"
 ---
 
 <!-- Contatti -->
-<section class="section-with-background max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+<section class="section-with-background max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16">
   <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Contatti</h1>
 </section>
 
