--- a/content/about.html
+++ b/content/about.html
@@ -1,14 +1,10 @@
 ---
 title: "Chi siamo"
+heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
 ---
 
-<!-- Specialisti in cilindri idraulici e pneumatici -->
-<section class="section-with-background max-w-screen-xl mx-auto py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
-  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Specialisti in riparazione cilindri e fornitura guarnizioni</h1>
-</section>
-
 <!-- Aree di competenza -->
-<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:py-16">
   <p class="mb-4">Supportiamo le imprese industriali con servizi di riparazione e manutenzione di cilindri idraulici e pneumatici esistenti, con la progettazione e costruzione interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre assistenza sul campo e vendita guarnizioni di tenuta per cilindri e presse</p>
   <p class="mb-4">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
   <p class="mb-8">Le nostre aree di competenza:</p>
