--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,11 +1,7 @@
 ---
 title: "I nostri servizi"
+heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 ---
-
-<!-- Siamo il partner ideale per l’intero ciclo di vita dei tuoi cilindri -->
-<section class="section-with-background max-w-screen-xl mx-auto py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
-  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Il partner ideale per l’intero ciclo di vita dei tuoi cilindri</h1>
-</section>
 
 <section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
