--- a/content/contatti.html
+++ b/content/contatti.html
@@ -1,11 +1,7 @@
 ---
 title: "Contatti"
+heading: "Contatti"
 ---
-
-<!-- Contatti -->
-<section class="section-with-background max-w-screen-xl mx-auto py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
-  <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Contatti</h1>
-</section>
 
 <section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
   <div class="sm:text-center">
