--- a/content/contatti.html
+++ b/content/contatti.html
@@ -10,7 +10,7 @@ heading: "Contatti"
     <p class="mb-8">Per informazioni o se hai bisogno di assistenza tecnica e commerciale puoi contattare:</p>
 
     <div class="flex flex-wrap justify-center gap-4 mb-8">
-      <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+      <div class="w-full max-w-sm hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200 shadow-lg">
         <div class="flex flex-col items-center p-4 lg:p-8">
           <h5 class="mb-1 text-xl font-medium text-gray-900">Alessio Mancini</h5>
           <span class="mb-8 text-sm text-gray-500">Sales Manager & Field Service</span>
@@ -21,7 +21,7 @@ heading: "Contatti"
         </div>
       </div>
 
-      <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+      <div class="w-full max-w-sm hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200 shadow-lg">
         <div class="flex flex-col items-center p-4 lg:p-8">
           <h5 class="mb-1 text-xl font-medium text-gray-900">Gianluca Mancini</h5>
           <span class="mb-8 text-sm text-gray-500">Production Manager & Technical Support</span>
