--- a/content/servizi.html
+++ b/content/servizi.html
@@ -3,7 +3,6 @@ title: "I nostri servizi"
 heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 ---
 
-
 <section class="max-w-screen-xl mx-auto">
   <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
     <div class="relative mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3">
@@ -27,9 +26,8 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 </section>
 
 <!-- Manutenzione -->
-<section id="manutenzione" class="max-w-screen-xl mx-auto relative z-10">
-  <div class="absolute inset-0 z-10 hero-bg-gradient"></div>
-  <div class="relative z-20">
+<section id="manutenzione">
+  <div class="max-w-screen-xl mx-auto">
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
 
       <h2 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal red-title uppercase">Manutenzione</h2>
@@ -42,24 +40,39 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
         <p>Le operazioni di revisione, riparazione, le lavorazioni meccaniche e la produzione dei componenti meccanici da sostituire avvengono totalmente all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura.</p>
         <p>Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</p>
       </div>
+    </div>
+  </div>
+
+  <div class="max-w-screen-xl mx-auto bg-slate-800">
+    <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
 
       <!-- Il tempo è denaro -->
-      <div class="relative flex lg:justify-center py-8 sm:py-12 lg:py-16">
-        <div class="prose">
-          <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Il tempo è denaro</h3>
+      <div class="relative flex lg:justify-center">
+        <div class="prose text-white text-contrast">
+          <h3 class="mb-8 text-white text-2xl sm:text-3xl font-bold tracking-tight">Il tempo è denaro</h3>
           <p>Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
         </div>
-        <img class="hidden lg:flex lg:ml-5 h-80 shrink-0 shadow-lg ring-1 ring-black ring-opacity-5" src="https://flowbite.com/marketing-ui/demo/images/billing-mockup.png" alt="">
-      </div>
-
-      <!-- Centro Cilindri Digital Service -->
-      <div class="prose">
-        <h3 class="text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
-        <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
-        <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
+        <img class="hidden lg:flex lg:ml-8 h-60 shrink-0 shadow-lg ring-1 ring-black ring-opacity-5" src="https://flowbite.com/marketing-ui/demo/images/billing-mockup.png" alt="">
       </div>
     </div>
   </div>
+
+
+  <div class="max-w-screen-xl mx-auto">
+    <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
+
+      <!-- Digital Service -->
+      <div class="relative flex lg:justify-center">
+        <img class="hidden lg:flex lg:mr-8 h-72 shrink-0" src="https://www.areatecnica.it/img/atds-mockup.png" alt="">
+        <div class="prose">
+          <h3 class="mb-8 text-black text-2xl sm:text-3xl font-bold tracking-tight">Centro Cilindri Digital Service</h3>
+          <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
+          <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
 <!-- Produzione -->
@@ -106,21 +119,19 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
     </div>
   </div>
 
+
   <div class="max-w-screen-xl mx-auto bg-slate-800">
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
-<div class="lg:w-2/3">
-  <div class="text-contrast">
-      <h2 class="text-3xl md:text-4xl lg:text-5xl mb-8 font-semibold leading-none tracking-tight text-white">Urgenze o impianto fermo?</h2>
-      <p class="mb-2 text-white">Grazie alla rete di partner strategici possiamo fornire guarnizioni tornite in 24 ore fino a 1400 mm di diametro esterno*</p>
-      <p class="text-xs font-normal text-gray-300">*da verificare in base alla disponibilità produttiva dei fornitori</p>
-</div>
-    </div>
+      <div class="lg:w-2/3">
+        <div class="text-contrast">
+          <h2 class="mb-8 text-2xl md:text-3xl lg:text-4xl font-semibold leading-none tracking-tight text-white">Urgenze o impianto fermo?</h2>
+          <p class="mb-2 text-white leading-relaxed">Grazie alla rete di partner strategici possiamo fornire guarnizioni tornite in 24 ore fino a 1400 mm di diametro esterno*</p>
+          <p class="text-xs font-normal text-gray-300">*da verificare in base alla disponibilità produttiva dei fornitori</p>
+        </div>
+      </div>
     </div>
   </div>
 
 </section>
-
-
-
 
 {{< cta >}}
