--- a/content/servizi.html
+++ b/content/servizi.html
@@ -4,7 +4,8 @@ heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 backgroundImage: "images/forging.jpeg"
 ---
 
-<section class="max-w-screen-xl mx-auto shadow-xl">
+<!--
+<section class="max-w-screen-xl mx-auto">
   <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
     <div class="relative mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3">
       <a href="#manutenzione" class="p-4 hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200">
@@ -21,6 +22,28 @@ backgroundImage: "images/forging.jpeg"
         <svg class="h-8 mb-4 text-gray-500" viewBox="0 0 44.523 16.006" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M28.055 15.95c-3.0551-.27923-5.8201-.94559-7.7047-1.8568-.92168-.44563-1.8766-1.0849-1.764-1.1809.03886-.0331.4326-.20601.87498-.38424.44238-.17823 1.0611-.4518 1.3749-.60794l.57054-.2839.99194.30067c1.2275.37209 3.0908.74933 4.598.93096 1.5357.18506 4.9583.25404 6.6081.13319 5.169-.37864 9.3201-1.8106 10.678-3.6835l.23947-.3302v1.2692c0 1.2461-.0047 1.2786-.25888 1.7872-.87338 1.7478-4.3211 3.1865-9.0892 3.7929-1.2218.15538-5.853.2291-7.1196.11334zm-23.19-1.3135c-1.682-.26151-2.9212-.77026-3.5126-1.4421-.32111-.3648-.40594-.58629-.84849-2.2152-.17589-.64742-.17343-.65006.28868-.3098 1.6026 1.1801 5.1704 1.5665 9.2955 1.0068 5.9267-.80414 12.118-3.357 14.809-6.1058.73451-.75042.87938-.94296 1.2049-1.6012l.27015-.54636.31623 1.2559c.28487 1.1314.30704 1.2968.2236 1.6692-.22364.99793-1.0741 2.0821-2.4406 3.1115-3.4061 2.5658-8.9757 4.5688-14.408 5.1815-1.4156.15968-4.158.15734-5.1986-.004zm23.583-1.9072c-2.2005-.15825-5.0181-.68729-6.5279-1.2257-.07675-.0274.10959-.17101.48865-.37669.33698-.18285.9052-.52532 1.2627-.76103l.65002-.42857.89334.21114c2.9959.70809 7.5945.77959 10.899.16946 2.3311-.43038 3.9956-1.2229 4.3462-2.0694.23893-.57683-.25438-1.3037-1.2146-1.7895-2.3229-1.1754-7.2086-1.6832-11.613-1.2071l-.508.0549-.24674-.98357c-.13571-.54097-.23035-.99997-.21032-1.02.24348-.24348 5.9578-.35211 7.8231-.14872 3.0955.33753 5.5725.96068 7.3573 1.8508 1.3394.66807 2.102 1.3161 2.4738 2.1024.90006 1.9031-1.5658 3.9003-6.1058 4.9454-2.859.65815-6.5068.91068-9.7675.67618zM4.306 11.5461c-1.6487-.20903-3.1868-.78996-3.7301-1.4088-.98254-1.119-.71555-2.3491.85126-3.9219 2.3469-2.3559 7.2529-4.5815 12.403-5.6266 2.4787-.50301 3.3139-.58828 5.7582-.58781 2.39.00052 3.2264.10972 4.495.5872 3.1659 1.1916 2.5804 3.817-1.4347 6.4341-3.4772 2.2665-8.9339 4.052-13.843 4.5297-1.0184.0991-3.699.0956-4.4995-.006zm4.4069-2.1158c4.9132-.38987 10.792-2.4713 12.83-4.5429 1.086-1.1035.87343-2.025-.57662-2.4996-.75248-.24628-3.0643-.30436-4.6106-.11584-6.2013.75606-12.719 3.8098-12.447 5.8323.11295.84211 1.1748 1.2791 3.407 1.4022.14203.008.77068-.0264 1.397-.0761zM5.237 8.93906c-1.2238-.39174-1.3957-.99994-.54881-1.9418 1.731-1.9253 7.3993-4.0228 12.183-4.5083 1.2603-.1279 3.3119-.0635 3.9096.12267 1.3641.42493 1.5254 1.1162.49987 2.1418l-.534.534h-1.3596c-.74913 0-1.7886.0583-2.315.12974-3.6912.50122-7.6459 1.7701-10.068 3.2303-.82981.50026-1.0185.5314-1.7673.29169zm32.828.28322c-.51052-.18744-2.1323-.52978-3.2793-.69222-.84307-.1194-1.618-.14918-3.81-.14644-2.4023.003-2.9022.027-3.937.18879-.65193.10193-1.2191.18555-1.2604.1858-.0413.00025.09694-.18345.30719-.40823.71727-.76682 1.1649-1.7159 1.1649-2.4699v-.32352l.74083-.0711c.40746-.0391 1.9029-.0683 3.3232-.0648 2.2165.005 2.7562.0328 3.81.19353 2.2664.34563 4.1801.99049 4.7716 1.6079.64209.6702.30005 1.4026-.91923 1.9684-.39759.1845-.48729.18763-.91168.0318z"/></svg>
         <h3 class="mb-2 text-lg font-semibold leading-none">Ricambi</h3>
         <p class="text-sm text-gray-700">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
+      </a>
+    </div>
+  </div>
+</section>
+-->
+<section class="max-w-screen-xl mx-auto">
+  <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
+    <div class="relative mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3">
+      <a href="#manutenzione" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="light-gradient absolute inset-0"></span>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Manutenzione</h3>
+        <p class="text-sm">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+      </a>
+      <a href="#produzione" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="light-gradient absolute inset-0"></span>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Produzione</h3>
+        <p class="text-sm">Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno</p>
+      </a>
+      <a href="#ricambi" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="light-gradient absolute inset-0"></span>
+        <h3 class="mb-2 text-lg font-semibold leading-none">Ricambi</h3>
+        <p class="text-sm">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
       </a>
     </div>
   </div>
