--- a/content/servizi.html
+++ b/content/servizi.html
@@ -30,20 +30,20 @@ backgroundImage: "images/forging.jpeg"
 <section class="max-w-screen-xl mx-auto">
   <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
     <div class="relative mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3">
-      <a href="#manutenzione" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
-        <span class="light-gradient absolute inset-0"></span>
+      <a href="#manutenzione" class="overflow-hidden relative min-h-[10rem] flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="hidden light-gradient absolute inset-0"></span>
         <h3 class="mb-2 text-lg font-semibold leading-none">Manutenzione</h3>
-        <p class="text-sm">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
+        <p class="text-sm text-gray-200">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</p>
       </a>
-      <a href="#produzione" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
-        <span class="light-gradient absolute inset-0"></span>
+      <a href="#produzione" class="overflow-hidden relative min-h-[10rem] flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="hidden light-gradient absolute inset-0"></span>
         <h3 class="mb-2 text-lg font-semibold leading-none">Produzione</h3>
-        <p class="text-sm">Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno</p>
+        <p class="text-sm text-gray-200">Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno</p>
       </a>
-      <a href="#ricambi" class="overflow-hidden relative min-h-40 flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
-        <span class="light-gradient absolute inset-0"></span>
+      <a href="#ricambi" class="overflow-hidden relative min-h-[10rem] flex flex-col justify-between p-4 rounded-lg bg-slate-800 text-white text-contrast">
+        <span class="hidden light-gradient absolute inset-0"></span>
         <h3 class="mb-2 text-lg font-semibold leading-none">Ricambi</h3>
-        <p class="text-sm">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
+        <p class="text-sm text-gray-200">Assistenza sul campo e vendita di guarnizioni per cilindri e presse</p>
       </a>
     </div>
   </div>
