--- a/content/about.html
+++ b/content/about.html
@@ -1,6 +1,7 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
+backgroundImage: "images/forging.jpeg"
 ---
 
 <!-- Aree di competenza -->
@@ -39,7 +40,7 @@ heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
         </div>
 
         <div class="mt-8 lg:mt-16">
-          <a href="{{< relref "servizi" >}}" class="inline-flex items-center justify-center p-2 border rounded-md text-white border-white uppercase font-normal">
+          <a class="inline-flex items-center justify-center p-2 sm:px-4 border rounded-full text-white border-white font-semibold" href="{{< relref "servizi" >}}">
             Scopri di più
             <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
