Nuovi contenuti organizzati meglio

--- a/content/about.html
+++ b/content/about.html
@@ -1,6 +1,7 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
+backgroundImage: ""
 ---
 
 <!-- Aree di competenza -->
